Fix layout issues

--- a/app/components/DropdownSelector.css
+++ b/app/components/DropdownSelector.css
@@ -1,8 +1,18 @@
+.component {
+  flex: 1;
+  height: 100%;
+}
+
 .selector {
   height: 40px;
   border-left: solid 1px #484848;
+  margin: 10px 0;
   padding: 2px 10px 2px 16px;
-  flex: 1;
+}
+
+.selected {
+  background: #fff;
+  color: #555;
 }
 
 .title {
