--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -19,6 +19,7 @@
 
 .sideBar {
   flex: 0 0 320px;
+  background: #555;
   color: #aaa;
 }
 
